0.7.0 (currently working on)
- [#1073] Feature: Add flexforms checkboxes to filter which event types should be displayed in the list view
- [#2113] Change: Move the filter for the event type to the seminar bag builder
- [#2105] Change: Remove the empty option from the top of the event type selector widget
- [#803] Change: Remove the _doEvents() method from the registration editor and the event editor
- [#2099] Feature: Provide the file type as CSS class in the list of downloadable file in the detail view
- [#1943] Feature: Add a global TS Setup switch "skip collision check"
- [#2074] Change: Drop the default event type (workshop)
- [#964] Change: Remove the additional event information from the registration page
- [#2078] Fix: Require static_taxes
- [#2093] Change: Allow creating fake front ends without adding a record to the pages table
- [#1916] Change: Use the createFakeFrontEnd function from the testing framework in the Seminar Manager
- [#1953] Feature: The file list should only be displayed for attendees
- [#2092] Change: Update the test record icon in seminars and oelib
- [#2067] Change: All fields from the FE user table should be usable in the notification e-mail
- [#1952] Feature: List the attached files in the detail view of an event
- [#1700] Feature: Add a tab "Access" for the BE event editor
- [#1902] Fix: "Reset filter" doesn't work
- [#2032] Fix: Hide the "referrer" field from the registration UI until it actually is used
- [#2003] Fix: Empty lines in the FE user data on the second registration page
- [#2001] Fix: City of event site doesn't appear in the event single view although it's entered in the BE
- [#2011] Fix: hideFieldsInNotificationMail doesn't work
- [#2018] Fix: Hidden single events still are visible in the list view limited to a category
- [#1995] Feature: Add configuration to pre-set the sites to show in the list view
- [#1977] Feature: Add a field "page for the detail view" to single event/event date records